--- a/assets/style.css
+++ b/assets/style.css
@@ -39,6 +39,7 @@ body{
 .navbar{
     width: 100%;
     background-color: #0080ff;
+    margin-bottom: 5%;
 }
 ul {
   list-style-type: none;
@@ -72,4 +73,25 @@ li a:hover {
 li:last-child a:hover{
   background-color: rgb(80, 80, 80);
   float:right;
+}
+
+table {
+  border-collapse: collapse;
+  width: 50%;
+  margin: 30px auto;
+  background: rgba(204, 204, 204, 0.5);
+  
+  
+}
+
+th, td {
+  border: 1px solid black;
+}
+
+td {
+  text-align: center;
+}
+
+h2 {
+text-align: center;
 }
